--- a/our-services.html
+++ b/our-services.html
@@ -176,7 +176,7 @@
                     </div>
                     <div id="w-node-_260b317a-e174-7e69-0923-8e653b23e2cc-567190f4" class="pricing-table">
                         <div class="plan-name">
-                            <div>Wealth empire Yearly</div>
+                            <div>Future Elites Yearly</div>
                             <div class="pricing-plan-line"></div>
                         </div>
                         <div class="price-tag">$672/Year</div>
@@ -210,7 +210,7 @@
                     </div>
                     <div class="pricing-table">
                         <div class="plan-name">
-                            <div>wealth empire lifetime</div>
+                            <div>Future Elites lifetime</div>
                             <div class="pricing-plan-line"></div>
                         </div>
                         <div class="price-tag">$1,200/Once</div>
