--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 <head>
     <meta charset="utf-8" />
     <title>Future Elites - Money Made Easy</title>
-    <meta content="Wealth Empire is a group of high-tier individuals looking to improve their skills in the stock market." name="description" />
-    <meta content="Wealth Empire - Trading Made Easy" property="og:title" />
-    <meta content="Wealth Empire is a group of high-tier individuals looking to improve their skills in the stock market." property="og:description" />
-    <meta content="Wealth Empire - Trading Made Easy" property="twitter:title" />
-    <meta content="Wealth Empire is a group of high-tier individuals looking to improve their skills in the stock market." property="twitter:description" />
+    <meta content="Future Elites is a group of high-tier individuals looking to improve their skills in the stock market, freelancing, and drop-shipping aspect of life." name="description" />
+    <meta content="Future Elites - Money Made Easy" property="og:title" />
+    <meta content="Future Elites is a group of high-tier individuals looking to improve their skills in the stock market, freelancing, and drop-shipping aspect of life." property="og:description" />
+    <meta content="Future Elites - Money Made Easy" property="twitter:title" />
+    <meta content="Future Elites is a group of high-tier individuals looking to improve their skills in the stock market, freelancing, and drop-shipping aspect of life." property="twitter:description" />
     <meta property="og:type" content="website" />
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
