--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <!-- Last Published: Fri Mar 24 2023 17:54:49 GMT+0000 (Coordinated Universal Time) -->
-<html data-wf-domain="www.wealthempire.co" data-wf-page="63af2899f3e17285637190e1" data-wf-site="63af2899f3e17265237190e2">
+<html data-wf-domain="https://futurellc.netlify.app/" data-wf-page="63af2899f3e17285637190e1" data-wf-site="63af2899f3e17265237190e2">
 
 <head>
     <meta charset="utf-8" />
